--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -1,10 +1,16 @@
 {
   "include": ["./sources/**/*"],
   "compilerOptions": {
-    "moduleResolution": "node",
-    "outDir": "./build/es5",
-    "module": "commonjs",
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "removeComments": true,
+    "baseUrl": "./sources",
+    "rootDir": "./sources",
+    "skipLibCheck": true,
+    "module": "CommonJS",
     "declaration": true,
+    "outDir": "./build",
     "target": "ES5",
     "lib": [
       "ES2020",
