--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,10 @@ jobs:
             - name: node
               uses: actions/setup-node@v2
               with:
-                  node-version: 12
+                  node-version: 18
                   registry-url: https://registry.npmjs.org
             - name: publish
-              run: npm publish --access public
-              working-directory: build
+              run: npm publish --access=public
+              working-directory: ./
               env:
                   NODE_AUTH_TOKEN: ${{secrets.SWIPE_EVENTS_MANAGER}}
