--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "name": "@prince-obrymec/swipe-events-manager",
   "types": "./build/index.d.ts",
   "main": "./build/index.js",
-  "files": ["./build/**/*"],
+  "files": [
+    "./build/**/*"
+  ],
   "sideEffects": false,
-  "version": "0.0.5",
+  "version": "1.0.0",
   "private": false,
   "license": "MIT",
   "bugs": {
@@ -18,6 +20,7 @@
     "type": "git"
   },
   "dependencies": {
+    "@prince-obrymec/swipe-events-manager": "^0.0.5",
     "typescript": "^5.2.2",
     "esbuild": "^0.19.4",
     "parcel": "^2.9.3"
