--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "name": "@prince-obrymec/swipe-events-manager",
   "types": "./build/index.d.ts",
   "main": "./build/index.js",
-  "files": [
-    "./build/**/*"
-  ],
   "sideEffects": false,
-  "version": "1.0.0",
+  "version": "1.0.4",
   "private": false,
   "license": "MIT",
   "bugs": {
@@ -19,20 +16,23 @@
     "url": "https://github.com/obrymec/swipe_events_manager.git",
     "type": "git"
   },
+  "scripts": {
+    "start": "rm -rf ./.parcel-cache && rm -rf ./dist && parcel ./index.html",
+    "build": "chmod +x ./dist.sh && bash ./dist.sh",
+    "publish": "npm publish --access=public"
+  },
   "dependencies": {
     "@prince-obrymec/swipe-events-manager": "^0.0.5",
     "typescript": "^5.2.2",
-    "esbuild": "^0.19.4",
+    "uglify-js": "^3.17.4",
     "parcel": "^2.9.3"
   },
-  "scripts": {
-    "minify-es5": "esbuild ./build/swipe.js --minify --outfile=./build/swipe.min.js",
-    "minify-es6": "esbuild ./build/swipe.js --minify --outfile=./build/swipe.min.js",
-    "compile-es6": "tsc --build tsconfig.es6.json",
-    "compile-es5": "tsc --build tsconfig.es5.json",
-    "publish": "npm publish --access=public",
-    "start": "parcel ./index.html"
-  },
+  "files": [
+    "./build/index.d.ts",
+    "./build/swipe.d.ts",
+    "./build/index.js",
+    "./build/swipe.js"
+  ],
   "keywords": [
     "touchevent",
     "touchstart",
